cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "ronki"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = "symbols"
trim-paths = true

[dependencies]
anstyle = "1.0.8"
anyhow = "1.0.87"
async-std = "1.13.0"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.5.0"
procfs = "0.16.0"
serde = "1.0.210"
serenity = "0.12.2"
surrealdb = "1.5.4"
tokio = "1.40.0"
toml = "0.8.19"
